fixed overflow in select

--- a/src/signals/incident-management/components/SelectInput/style.scss
+++ b/src/signals/incident-management/components/SelectInput/style.scss
@@ -1,5 +1,5 @@
 .select-input__control.invoer {
   select[multiple] {
-    overflow-y: auto !important;
+    overflow-y: auto;
   }
 }
